Changed AORepo Maven artifact repository URL to include trailing slash.

--- a/book/src/main/resources-filtered/META-INF/resources/all/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/all/changelog.jspx
@@ -82,7 +82,7 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 			datePublished="2017-07-20T19:07:05-0500"
 			groupId="@{documented.groupId}"
 			artifactId="@{documented.artifactId}"
-			repository="https://aorepo.org/maven2"
+			repository="https://aorepo.org/maven2/"
 			scmUrl="@{documented.scm.url}"
 		>
 			<ul>
@@ -97,7 +97,7 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 			datePublished="2016-11-16T22:57:09-0600"
 			groupId="@{documented.groupId}"
 			artifactId="@{documented.artifactId}"
-			repository="https://aorepo.org/maven2"
+			repository="https://aorepo.org/maven2/"
 			scmUrl="@{documented.scm.url}"
 		>
 			<ul>
@@ -113,7 +113,7 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 			datePublished="2016-10-20T20:28:46-0500"
 			groupId="@{documented.groupId}"
 			artifactId="@{documented.artifactId}"
-			repository="https://aorepo.org/maven2"
+			repository="https://aorepo.org/maven2/"
 			scmUrl="@{documented.scm.url}"
 		>
 			<ul>
@@ -128,7 +128,7 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 			datePublished="2016-10-05T00:25:45-0500"
 			groupId="@{documented.groupId}"
 			artifactId="@{documented.artifactId}"
-			repository="https://aorepo.org/maven2"
+			repository="https://aorepo.org/maven2/"
 			scmUrl="@{documented.scm.url}"
 		>
 			<ul>
@@ -142,7 +142,7 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 			datePublished="2016-09-11T17:59:03-0500"
 			groupId="@{documented.groupId}"
 			artifactId="@{documented.artifactId}"
-			repository="https://aorepo.org/maven2"
+			repository="https://aorepo.org/maven2/"
 			scmUrl="@{documented.scm.url}"
 		>
 			<ul>
@@ -157,7 +157,7 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 			datePublished="2016-09-03T11:50:12-0500"
 			groupId="@{documented.groupId}"
 			artifactId="@{documented.artifactId}"
-			repository="https://aorepo.org/maven2"
+			repository="https://aorepo.org/maven2/"
 			scmUrl="@{documented.scm.url}"
 		>
 			<ul>
