--- a/book/src/main/resources-filtered/META-INF/resources/all/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/all/changelog.jspx
@@ -37,7 +37,7 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2017-07-25T09:13:13-0500"
-		dateModified="2017-07-27T20:46:54-0500"
+		dateModified="2017-07-31T21:56:55-0500"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.pragmatickm:pragmatickm-all:pom.version}" />
@@ -54,10 +54,10 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 				scmUrl="@{documented.scm.url}"
 			>
 				<ul>
-					<li>New version of <core:link book="/contact/all" page="/index.jspx" />.</li>
-					<li>New version of <core:link book="/password/all" page="/index.jspx" />.</li>
-					<li>New version of <core:link book="/procedure/all" page="/index.jspx" />.</li>
-					<li>New version of <core:link book="/task/all" page="/index.jspx" />.</li>
+					<li>Updated version of <core:link book="/contact/all" page="/index.jspx" />.</li>
+					<li>Updated version of <core:link book="/password/all" page="/index.jspx" />.</li>
+					<li>Updated version of <core:link book="/procedure/all" page="/index.jspx" />.</li>
+					<li>Updated version of <core:link book="/task/all" page="/index.jspx" />.</li>
 				</ul>
 			</changelog:release>
 		</c:if>
