--- a/book/src/main/resources-filtered/META-INF/resources/all/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/all/changelog.jspx
@@ -36,7 +36,7 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2017-07-25T09:13:13-0500"
-		dateModified="2019-06-06T20:07:37-0500"
+		dateModified="2019-06-19T09:48:11-0500"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.pragmatickm:pragmatickm-all:pom.version}" />
@@ -59,7 +59,7 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 					<li>Updated version of <core:link book="/task/all" page="/" />.</li>
 					<li>Using managed dependencies:
 						<ol>
-							<li>This project uses transitive managed dependencies.</li>
+							<li>This project uses managed dependencies.</li>
 							<li>This project's managed dependencies may also be imported by other projects.</li>
 						</ol>
 					</li>
