--- a/book/src/main/resources-filtered/META-INF/resources/all/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/all/changelog.jspx
@@ -36,7 +36,7 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2017-07-25T09:13:13-0500"
-		dateModified="2019-09-30T10:42:44-0500"
+		dateModified="2019-10-12T09:24:52-0500"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.pragmatickm:pragmatickm-all:pom.version}" />
@@ -51,15 +51,24 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 				groupId="@{documented.groupId}"
 				artifactId="@{documented.artifactId}"
 				scmUrl="@{documented.scm.url}"
-			>
-				<ul>
-					<li>Updated version of <core:link book="/contact/all" page="/" />.</li>
-					<li>Updated version of <core:link book="/password/all" page="/" />.</li>
-					<li>Updated version of <core:link book="/procedure/all" page="/" />.</li>
-					<li>Updated version of <core:link book="/task/all" page="/" />.</li>
-				</ul>
-			</changelog:release>
+			/>
 		</c:if>
+
+		<changelog:release
+			projectName="@{documented.name}"
+			version="1.4.0"
+			datePublished="2019-10-12T09:24:52-0500"
+			groupId="@{documented.groupId}"
+			artifactId="@{documented.artifactId}"
+			scmUrl="@{documented.scm.url}"
+		>
+			<ul>
+				<li>Updated version of <core:link book="/contact/all" page="/" />.</li>
+				<li>Updated version of <core:link book="/password/all" page="/" />.</li>
+				<li>Updated version of <core:link book="/procedure/all" page="/" />.</li>
+				<li>Updated version of <core:link book="/task/all" page="/" />.</li>
+			</ul>
+		</changelog:release>
 
 		<changelog:release
 			projectName="@{documented.name}"
