--- a/book/src/main/resources-filtered/META-INF/resources/all/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/all/changelog.jspx
@@ -37,7 +37,7 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2017-07-25T09:13:13-0500"
-		dateModified="2020-03-07T06:01:29-0600"
+		dateModified="2020-03-29T06:26:04-05:00"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.pragmatickm:pragmatickm-all:pom.version}" />
@@ -52,20 +52,29 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 				groupId="@{project.groupId}"
 				artifactId="@{documented.artifactId}"
 				scmUrl="@{project.scm.url}"
-			>
-				<ul>
-					<li>Minimum Java version changed from 1.7 to 1.8.</li>
-					<li>
-						Reduced use of property substitutions in <code>pom.xml</code>.
-						This is to help 3rd-party parsers that fail to perform full Maven-compatible substitutions.
-					</li>
-					<li>Updated version of <core:link book="/contact/all" page="/index.jspx" />.</li>
-					<li>Updated version of <core:link book="/password/all" page="/index.jspx" />.</li>
-					<li>Updated version of <core:link book="/procedure/all" page="/index.jspx" />.</li>
-					<li>Updated version of <core:link book="/task/all" page="/index.jspx" />.</li>
-				</ul>
-			</changelog:release>
+			/>
 		</c:if>
+
+		<changelog:release
+			projectName="@{documented.name}"
+			version="1.5.0"
+			datePublished="2020-03-29T06:26:04-05:00"
+			groupId="@{project.groupId}"
+			artifactId="@{documented.artifactId}"
+			scmUrl="@{project.scm.url}"
+		>
+			<ul>
+				<li>Minimum Java version changed from 1.7 to 1.8.</li>
+				<li>
+					Reduced use of property substitutions in <code>pom.xml</code>.
+					This is to help 3rd-party parsers that fail to perform full Maven-compatible substitutions.
+				</li>
+				<li>Updated version of <core:link book="/contact/all" page="/index.jspx" />.</li>
+				<li>Updated version of <core:link book="/password/all" page="/index.jspx" />.</li>
+				<li>Updated version of <core:link book="/procedure/all" page="/index.jspx" />.</li>
+				<li>Updated version of <core:link book="/task/all" page="/index.jspx" />.</li>
+			</ul>
+		</changelog:release>
 
 		<changelog:release
 			projectName="@{documented.name}"
